# Copyright 2018 The PDFium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../pdfium.gni")

source_set("image_diff") {
  testonly = true
  sources = [
    "image_diff_png.cpp",
    "image_diff_png.h",
  ]
  configs += [
    "../../:pdfium_strict_config",
    "../../:pdfium_noshorten_config",
  ]
  deps = [
    "../../third_party:pdfium_base",
    "../../third_party:png",
    "../../third_party:zlib",
  ]
}
